# di/restapi/api_v1/server/operations/models/kill_training_model_parameters.go
@@ -1,0 +1,73 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime/middleware"
+
+	strfmt "github.com/go-openapi/strfmt"
+)
+
+// NewKillTrainingModelParams creates a new KillTrainingModelParams object
+// no default values defined in spec.
+func NewKillTrainingModelParams() KillTrainingModelParams {
+
+	return KillTrainingModelParams{}
+}
+
+// KillTrainingModelParams contains all the bound params for the kill training model operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters KillTrainingModel
+type KillTrainingModelParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*The id of the model.
+	  Required: true
+	  In: path
+	*/
+	ModelID string
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewKillTrainingModelParams() beforehand.
+func (o *KillTrainingModelParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	rModelID, rhkModelID, _ := route.Params.GetOK("model_id")
+	if err := o.bindModelID(rModelID, rhkModelID, route.Formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// bindModelID binds and validates parameter ModelID from path.
+func (o *KillTrainingModelParams) bindModelID(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: true
+	// Parameter is provided by construction from the route
+
+	o.ModelID = raw
+
+	return nil
+}
