# di/restapi/api_v1/server/rest_impl/manifest.go
@@ -26,6 +26,7 @@ import (
 	cc "webank/DI/commons/controlcenter/client"
 	"webank/DI/commons/logger"
 	"webank/DI/pkg/operators/tf-operator/apis/tensorflow/v1alpha1"
+	"webank/DI/restapi/api_v1/restmodels"
 	"webank/DI/trainer/trainer/grpc_trainer_v2"
 
 	"webank/DI/commons/config"
@@ -36,18 +37,18 @@ import (
 
 // ManifestV1 represents a manifest used to define the configurations for a training job
 type ManifestV1 struct {
-	Name              string            `yaml:"name,omitempty"`
-	Description       string            `yaml:"description,omitempty"`
-	Version           string            `yaml:"version,omitempty"`
-	Cpus              float64           `yaml:"cpus,omitempty"`
-	Gpus              float64           `yaml:"gpus,omitempty"`
-	GpuType           string            `yaml:"gpu_type,omitempty"`
-	Learners          int32             `yaml:"learners,omitempty"`
-	Memory            string            `yaml:"memory,omitempty"`
-	Storage           string            `yaml:"storage,omitempty"`
-	DataStores        []*dataStoreRef   `yaml:"data_stores,omitempty"`
-	Framework         *frameworkV1      `yaml:"framework,omitempty"`
-	Namespace         string            `yaml:"namespace,omitempty"`
+	Name         string                         `yaml:"name,omitempty"`
+	Description  string                         `yaml:"description,omitempty"`
+	Version      string                         `yaml:"version,omitempty"`
+	Cpus         float64                        `yaml:"cpus,omitempty"`
+	Gpus         float64                        `yaml:"gpus,omitempty"`
+	GpuType      string                         `yaml:"gpu_type,omitempty"`
+	Learners     int32                          `yaml:"learners,omitempty"`
+	Memory       string                         `yaml:"memory,omitempty"`
+	Storage      string                         `yaml:"storage,omitempty"`
+	DataStores   []*dataStoreRef                `yaml:"data_stores,omitempty"`
+	Framework    *frameworkV1                   `yaml:"framework,omitempty"`
+	Namespace    string                         `yaml:"namespace,omitempty"`
 	JobAlert     map[string][]map[string]string `yaml:"job_alert,omitempty"`
 	CodeSelector string                         `yaml:"code_selector,omitempty"`
 	CodePath     string                         `yaml:"code_path,omitempty"`
@@ -62,12 +63,14 @@ type ManifestV1 struct {
 	TFosRequest  *v1alpha1.TFosRequest          `yaml:"tfos_request,omitempty"`
 	DssTaskId    int64                          `yaml:"dss_task_id,omitempty"`
 	ProxyUser    string                         `yaml:"proxy_user,omitempty"`
-	JobParams string   `yaml:"job_params,omitempty"`
-	DataSet   *DataSet `yaml:"data_set,omitempty"`
-	MFModel *MFModel `yaml:"mf_model,omitempty"`
-	Algorithm string `yaml:"algorithm,omitempty"`
-	FitParams string   `yaml:"fit_params,omitempty"`
-	APIType string   `yaml:"API_type,omitempty"`
+	JobParams    string                         `yaml:"job_params,omitempty"`
+	DataSet      *DataSet                       `yaml:"data_set,omitempty"`
+	MFModel      *MFModel                       `yaml:"mf_model,omitempty"`
+	Algorithm    string                         `yaml:"algorithm,omitempty"`
+	FitParams    string                         `yaml:"fit_params,omitempty"`
+	APIType      string                         `yaml:"API_type,omitempty"`
+	SubmitId     string                         `yaml:"submit_id,omitempty"`
+	UserId       string                         `yaml:"user_id,omitempty"`
 }
 
 type DataSet struct {
@@ -80,21 +83,20 @@ type DataSet struct {
 }
 
 type MFModel struct {
-	GroupId    string `yaml:"group_id,omitempty"`
+	GroupId     string `yaml:"group_id,omitempty"`
 	ModelName   string `yaml:"model_name,omitempty"`
 	Version     string `yaml:"version,omitempty"`
-	FactoryName     string `yaml:"factory_name,omitempty"`
+	FactoryName string `yaml:"factory_name,omitempty"`
 }
 
 type dataStoreRef struct {
-	ID              string              `yaml:"id,omitempty"`
-	Type            string              `yaml:"type,omitempty"`
-	TrainingData    *storageContainerV1 `yaml:"training_data,omitempty"`
-	TrainingResults *storageContainerV1 `yaml:"training_results,omitempty"`
+	ID                string              `yaml:"id,omitempty"`
+	Type              string              `yaml:"type,omitempty"`
+	TrainingData      *storageContainerV1 `yaml:"training_data,omitempty"`
+	TrainingResults   *storageContainerV1 `yaml:"training_results,omitempty"`
 	TrainingWorkspace *storageContainerV1 `yaml:"training_workspace,omitempty"`
 	Connection        map[string]string   `yaml:"connection,omitempty"`
 }
-
 
 type frameworkV1 struct {
 	Name     string `yaml:"name,omitempty"`
@@ -126,7 +128,6 @@ func WriteManifestV1(t *ManifestV1) ([]byte, error) {
 	return data, nil
 }
 
-
 // manifest2TrainingRequest converts the existing manifest to a training request for the trainer microservice.
 func manifest2TrainingRequest(m *ManifestV1, modelDefinition []byte, http *http.Request,
 	logr *logger.LocLoggingEntry, dataPath string) (*grpc_trainer_v2.CreateRequest, error) {
@@ -134,6 +135,11 @@ func manifest2TrainingRequest(m *ManifestV1, modelDefinition []byte, http *http.
 	// 1. Params Init
 	authToken := http.Header.Get(cc.CcAuthToken)
 	userId := getUserID(http)
+
+	if m.UserId == "" {
+		m.UserId = userId
+	}
+
 	execUserId := userId
 	if m.Namespace == "" {
 		return nil, *new(error)
@@ -145,7 +151,6 @@ func manifest2TrainingRequest(m *ManifestV1, modelDefinition []byte, http *http.
 		execUserId = m.ProxyUser
 	}
 
-
 	// 2.User Namespace Check
 	err := ccClient.UserNamespaceCheck(authToken, userId, m.Namespace)
 	if err != nil {
@@ -154,14 +159,14 @@ func manifest2TrainingRequest(m *ManifestV1, modelDefinition []byte, http *http.
 	}
 
 	//3. Get GUID From CC
-	var gid,uid *string
-	if m.ProxyUser == ""{
+	var gid, uid *string
+	if m.ProxyUser == "" {
 		gid, uid, err = ccClient.GetGUIDFromUserId(authToken, execUserId)
 		if err != nil {
 			log.Error("GetGUIDFromUserId error:", err.Error())
 			return nil, err
 		}
-	}else{
+	} else {
 		proxyUser, err := ccClient.GetProxyUserFromCC(authToken, userId, execUserId)
 		if err != nil {
 			log.Error("GetProxyUserFromCC error:", err.Error())
@@ -183,7 +188,6 @@ func manifest2TrainingRequest(m *ManifestV1, modelDefinition []byte, http *http.
 		}
 		logr.Debugf("manifest2TrainingRequest to get gid: %v", gid)
 	}
-
 
 	// 5. JobAlert Transform
 	jobAlert := m.JobAlert
@@ -210,7 +214,7 @@ func manifest2TrainingRequest(m *ManifestV1, modelDefinition []byte, http *http.
 
 	//7. Build Trainer RPC Request
 	r := &grpc_trainer_v2.CreateRequest{
-		UserId: userId,
+		UserId: m.UserId,
 		ModelDefinition: &grpc_trainer_v2.ModelDefinition{
 			Name:        m.Name,
 			Description: m.Description,
@@ -236,23 +240,24 @@ func manifest2TrainingRequest(m *ManifestV1, modelDefinition []byte, http *http.
 				},
 			},
 		},
-		Namespace: m.Namespace,
-		Gid: *gid,
-		Uid: *uid,
+		Namespace:    m.Namespace,
+		Gid:          *gid,
+		Uid:          *uid,
 		JobAlert:     jobString,
 		CodeSelector: m.CodeSelector,
 		DataPath:     dataPath,
-		PSs:         m.PSs,
-		PSCpu:       m.PSCPU,
-		PSImage:     m.PSImage,
-		PSMemory:    m.PSMemory,
-		JobType:     m.JobType,
-		TFosRequest: tFRequest,
-		ProxyUser:   m.ProxyUser,
-		JobParams:   m.JobParams,
-		Algorithm:   m.Algorithm,
-		FitParams:   m.FitParams,
-		APIType:     m.APIType,
+		PSs:          m.PSs,
+		PSCpu:        m.PSCPU,
+		PSImage:      m.PSImage,
+		PSMemory:     m.PSMemory,
+		JobType:      m.JobType,
+		TFosRequest:  tFRequest,
+		ProxyUser:    m.ProxyUser,
+		JobParams:    m.JobParams,
+		Algorithm:    m.Algorithm,
+		FitParams:    m.FitParams,
+		APIType:      m.APIType,
+		SubmitId:     userId,
 	}
 
 	// FIXME MLSS Change: get alert parms
@@ -311,26 +316,103 @@ func manifest2TrainingRequest(m *ManifestV1, modelDefinition []byte, http *http.
 
 	if nil != m.DataSet {
 		r.DataSet = &grpc_trainer_v2.DataSet{
-			TrainingDataPath: m.DataSet.TrainingDataPath,
-			TrainingLabelPath: m.DataSet.TrainingLabelPath,
-			TestingDataPath: m.DataSet.TestingDataPath,
-			TestingLabelPath: m.DataSet.TestingLabelPath,
-			ValidationDataPath: m.DataSet.ValidationDataPath,
+			TrainingDataPath:    m.DataSet.TrainingDataPath,
+			TrainingLabelPath:   m.DataSet.TrainingLabelPath,
+			TestingDataPath:     m.DataSet.TestingDataPath,
+			TestingLabelPath:    m.DataSet.TestingLabelPath,
+			ValidationDataPath:  m.DataSet.ValidationDataPath,
 			ValidationLabelPath: m.DataSet.ValidationLabelPath,
 		}
 	}
 
 	if nil != m.MFModel {
 		r.MfModel = &grpc_trainer_v2.MFModel{
-			GroupId:   m.MFModel.GroupId,
-			ModelName: m.MFModel.ModelName,
-			Version:   m.MFModel.Version,
+			GroupId:     m.MFModel.GroupId,
+			ModelName:   m.MFModel.ModelName,
+			Version:     m.MFModel.Version,
 			FactoryName: m.MFModel.FactoryName,
 		}
 	}
 
-
 	return r, nil
+}
+
+// trainingToManifest converts the existing a training to manifest for the trainer microservice
+func trainingToManifest(m *restmodels.Model, modelDefinition []byte, http *http.Request,
+	logr *logger.LocLoggingEntry, dataPath string) (*ManifestV1, error) {
+
+	var err error
+
+	mem, err := convertMemoryToStringFromManifest(m.Training.Memory)
+	if err != nil {
+		logr.WithError(err).Errorf("Incorrect memory specification in manifest")
+	}
+
+	//7. Build Trainer RPC Request
+	r := &ManifestV1{
+		APIType:      m.APIType,
+		Name:         m.Name,
+		Description:  m.Description,
+		PSs:          m.Pss,
+		PSImage:      m.PsImage,
+		JobType:      m.JobType,
+		Namespace:    m.JobNamespace,
+		Cpus:         m.Training.Cpus,
+		Gpus:         m.Training.Gpus,
+		PSCPU:        m.PsCPU,
+		PSMemory:     m.PsMemory,
+		Memory:       mem,
+		ProxyUser:    m.ProxyUser,
+		JobParams:    m.JobParams,
+		CodeSelector: m.CodeSelector,
+		UserId:       m.UserID,
+		FileName:     m.FileName,
+		CodePath:     m.FilePath,
+	}
+
+	// FIXME MLSS Change: get alert parms
+	logr.Infof("manifest, JobAlert connection: %v, type: %v", m.DataStores[0].Connection, m.DataStores[0].Connection["type"])
+	logr.Infof("manifest2TrainingRequest, JobType: %v", m.JobType)
+	logr.Infof("manifest2TrainingRequest, TfosRequest: %v", m.TFosRequest)
+
+	if nil != m.DataSet {
+		r.DataSet = &DataSet{
+			TrainingDataPath:    m.DataSet.TrainingDataPath,
+			TrainingLabelPath:   m.DataSet.TrainingLabelPath,
+			TestingDataPath:     m.DataSet.TestingDataPath,
+			TestingLabelPath:    m.DataSet.TestingLabelPath,
+			ValidationDataPath:  m.DataSet.ValidationDataPath,
+			ValidationLabelPath: m.DataSet.ValidationLabelPath,
+		}
+	}
+
+	r.MFModel = &MFModel{
+		Version: m.Framework.Version,
+	}
+
+	r.Framework = &frameworkV1{
+		Version: m.Framework.Version,
+		Command: m.Training.Command,
+		Name:    m.Framework.Name,
+	}
+	datas1 := &dataStoreRef{
+		Connection:   m.DataStores[0].Connection,
+		TrainingData: &storageContainerV1{Container: m.DataStores[0].Connection["bucket"]},
+	}
+	for _, v := range m.DataStores {
+
+		if val, ok := v.Connection["bucket"]; ok {
+			datas1.TrainingResults = &storageContainerV1{Container: val}
+		}
+
+		if val, ok := v.Connection["codeWork"]; ok {
+			datas1.TrainingWorkspace = &storageContainerV1{Container: val}
+		}
+	}
+	r.DataStores = append(r.DataStores, datas1)
+	logr.Infof("DataStores:%v", r.DataStores)
+
+	return r, err
 }
 
 // Converts an incoming memory spec like 4GB or 1024mb into a memory (float64)
@@ -361,4 +443,11 @@ func convertMemoryFromManifest(memStr string) (float32, grpc_trainer_v2.SizeUnit
 		}
 	}
 	return 512, grpc_trainer_v2.SizeUnit_MB, fmt.Errorf("Memory requirements not correctly specified: %s", memStr)
+}
+
+// convertMemoryToStringFromManifest + Gb
+func convertMemoryToStringFromManifest(momory float64) (mom string, err error) {
+	mom = strconv.FormatFloat(momory, 'f', 0, 64)
+	mom = mom + "Gb"
+	return
 }
